# cookiecutter-rust-warp-diesel

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}/: .env  Cargo.toml
{{cookiecutter.project_name}}/src/: api.rs  db_manager.rs  errors.rs  main.rs  model.rs
