[package]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["r2d2", "postgres"] }
dotenv = "0.15.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = "1.0.137"
serde_derive = "1.0.137"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
warp = "0.3.2"
